After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733099 - Regression: gtk_window_set_title() no longer sets header bar title
Regression: gtk_window_set_title() no longer sets header bar title
Status: VERIFIED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.13.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-07-12 16:52 UTC by Michael Catanzaro
Modified: 2014-07-16 03:33 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Michael Catanzaro 2014-07-12 16:52:58 UTC
gtk_window_set_title() no longer sets the header bar title on windows where a header bar is in use, resulting in blank header bars in various apps. See, for example, the preferences dialog in examples/application10, which works fine in 3.13.3 but is broken in master.

Bisected to "GtkDialog: Don't use csd when use-header-bar is FALSE" -- https://git.gnome.org/browse/gtk+/commit/?id=120d1f898300b86ff0aacfd8aefdcb0a78560bf0
Comment 1 Michael Catanzaro 2014-07-15 17:03:51 UTC
I don't think this is fixed, there's still no title on the preferences dialog in examples/application10. The title is also still missing on the certificate viewer in Epiphany.