GtkDialog: Set window titles in header bars

This is fallout from the recent dialog changes. We don't set the
headerbar as titlebar early enough anymore, so when the window title
gets set, it does not get passed on to the headerbar. So, re-set it
manually when the titlebar is put in place.

https://bugzilla.gnome.org/show_bug.cgi?id=733099